# kaffe

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  ChangeLog.1  ChangeLog.10  ChangeLog.11  ChangeLog.12  ChangeLog.13  ChangeLog.14  ChangeLog.16  ChangeLog.18  ChangeLog.19  ChangeLog.2  ChangeLog.5  ChangeLog.7  ChangeLog.8  ChangeLog.9  INSTALL  Makefile.am  Makefile.in  README  README.depend  RELEASE-NOTES  THIRDPARTY  TODO  WHATSNEW  acinclude.m4  aclocal.m4  autobuild.sh  config.guess  config.sub  configure  configure.ac  configure.in  depcomp  gnu-crypto.m4  gwqt.m4  herrno.m4  in6addr.m4  (+11 more)
config/: .cvsignore  Makefile.am  Makefile.in  acconfig.h  config-hacks.h  config-io.h  config-math.h  config-mem.h  config-net.h  config-setjmp.h  config-signal.h  config-std.h  config.alias  config.h.in  kaffe-unix-stack.h  katomic.h  regen-forward  stamp-h1.in  sysdepCallMethod-ffi.h
config/alpha/: alpha.c  atomic.h  atomicity.h  callKaffeException.h  common.h  jit-alpha.def  jit-icode.h  jit.h  sysdepCallMethod.h  threads.h  trampolines.S  trampolines.c
config/arm/: atomicity.h  callKaffeException.h  common.h  jit-arm.def  jit-icode.h  jit.h  jit3-arm.def  jit3-icode.h  sysdepCallMethod.h  threads.h  trampolines.S  trampolines.c
config/bfin/: atomicity.h  callKaffeException.h  common.h  jit-bfin.def  jit3-bfin.def  sysdepCallMethod.h  threads.h  trampolines.S
config/generic/: comparexch.h  genatomic.h  gentypes.h
config/i386/: atomic.h  callKaffeException.h  common.h  fpu-set.h  jit-i386.def  jit-icode.h  jit.h  jit3-i386.def  jit3-icode.h  sysdepCallMethod.h  threads.h  trampolines.S  trampolines.c
config/ia64/: atomic.h  atomicity.h  common.h  sysdepCallMethod.h  threads.h
config/m68k/: atomic.h  atomicity.h  callKaffeException.h  clear-cache.h  common.h  jit-icode.h  jit-m68k.def  jit.h  jit3-icode.h  jit3-m68k.def  sysdepCallMethod.h  threads.h  trampolines.S  trampolines.c
config/mips/: atomic.h  atomicity.h  callKaffeException.h  common.h  jit.h  jit3-icode.h  jit3-mips.def  mips.c  n32-sysdepCallMethod.h  o32-sysdepCallMethod.h  sysdepCallMethod.h  threads.h  trampolines.S  trampolines.c
config/parisc/: common.h  sysdepCallMethod.h  threads.h
config/powerpc/: atomic.h  callKaffeException.h  callmethod_ppc.h  common.h  jit-labels.h  jit.h  jit3-icode.h  jit3-powerpc.def  ppc_isa.defs  ppc_isa.h  ppc_macros.h  ppc_stack_frame.h  sysdepCallMethod.h  threads.h  trampolines.S  trampolines.c
config/s390/: atomic.h  atomicity32.h  atomicity64.h  common.h  sysdepCallMethod.h  threads.h
config/sh/: common.h  sysdepCallMethod.h  threads.h  trampolines.S  trampolines.c
config/sparc/: atomic-sparc32.h  atomic-sparc32v9.h  atomic-sparc64.h  atomicity-sparc32.h  atomicity-sparc32v9.h  atomicity-sparc64.h  callKaffeException.h  common.h  jit-icode.h  jit-sparc.def  jit.h  sysdepCallMethod.h  threads.h  trampolines.S  trampolines.c
config/superh/: common.h  sysdepCallMethod.h  threads.h  trampolines.c
config/tile/: atomictile.h  common.h  threads.h
config/x86_64/: atomic.h  common.h  sysdepCallMethod.h  threads.h
include/: .cvsignore  Arrays.h  Makefile.am  Makefile.in  defs.h  distclean-hack  dummyin6.h  errors.h  files.h  gccbuiltin.h  getaddrinfo.h  gettext.h  ifaddrs_compat.h  java_lang_Object.h  java_lang_String.h  java_lang_Thread$Finalizer.h  java_lang_Thread.h  java_lang_ThreadGroup.h  java_lang_Throwable.h  jawt.h  jmalloc.h  jni.h  jni_cpp.h  jni_md.h  jsyscall.h  jtypes.h.in  jvmpi.h  kaffe_jni.h  native.h  nets.h  stamp-h2.in  system.h
include/kaffe/: .cvsignore  jmalloc.h  jni_md.h.in  jtypes.h.in  trampoline.h
kaffe/: Makefile.am  Makefile.in
kaffe/jvmpi/: Makefile.am  Makefile.in  jvmpi_kaffe.c  jvmpi_kaffe.h
kaffe/kaffe/: .cvsignore  Makefile.am  Makefile.in  main.c  version.c  version.h
kaffe/kaffeh/: .cvsignore  Makefile.am  Makefile.in  constants.c  constants.h  file.h  java_lang_ClassLoader.h  java_lang_Object.h  java_lang_String.h  kaffeh-support.h  main.c  mem.c  readClassConfig.h  sigs.c  support.c  util.c
kaffe/kaffevm/: .cvsignore  Makefile.am  Makefile.in  access.c  access.h  baseClasses.c  baseClasses.h  binreloc.c  binreloc.h  bytecode.h  classMethod.c  classMethod.h  classPool.c  classpath.h  code-analyse.c  code-analyse.h  code.c  code.h  constants.c  constants.h  debug.c  debug.h  errors.h  exception.c  exception.h  external.c  external.h  fastlocks.c  fastlocks.h  file.c  file.h  findInJar.c  flags.c  flags.h  fp.c  fp.h  gc-refs.c  gc-refs.h  gc.c  gc.h  (+69 more)
kaffe/man/: .cvsignore  Makefile.am  Makefile.in  kaffe.1  kaffe.1.in  kaffe.1.xml
kaffe/scripts/: .cvsignore  Makefile.am  Makefile.in  appletviewer  appletviewer.bat  appletviewer.in  install-jar.in  jar  jar.bat  jar.in  javac  javac.bat  javac.in  javadoc  javadoc.in  javah.in  javakey  javakey.in  javap  javap.bat  javap.in  jdb  jdb.in  kaffe.in  kaffexprof.in  kjc.in  kopi.in  native2ascii  native2ascii.bat  native2ascii.in  nm2as.awk  pizza  pizza.in  pizzadoc  pizzadoc.in  report-kaffe-bug  report-kaffe-bug.bat  rmic  rmic.bat  rmic.in  (+4 more)
kaffe/xprof/: Makefile.am  Makefile.in  callGraph.c  callGraph.h  debugFile.c  debugFile.h  feedback.c  feedback.h  fileSections.c  fileSections.h  gmonFile.c  gmonFile.h  mangle.c  mangle.h  memorySamples.c  memorySamples.h  sectionFile.c  sectionFile.h  xprofiler.c  xprofiler.h
libltdl/: .cvsignore  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  config-h.in  config.h.in  config.sub  configure  configure.in  install-sh  ltdl.c  ltdl.h  ltmain.sh
libraries/clib/: Makefile.am  Makefile.in  external_native.h  external_wrappers.h
libraries/javalib/: .cvsignore  Klasses.jar.bootstrap  Makefile.am  Makefile.am.in  Makefile.in  all.files  bootstrap.classlist  essential.files  makeJava  native_java_math.files  pure_java_math.files  (+1 more)
replace/: .cvsignore  Makefile.am  Makefile.in  dummyin6.c  getaddrinfo.c  getifaddrs.c  ifaddrs.h  ifaddrs_bsd.c  ifaddrs_linux.c  inet_ntop.c  inet_pton.c  memset.c  repsemaphore.h  semaphores.c
test/: HelloWorldApp.java  Makefile.am  Makefile.in
tools/: Makefile.am  Makefile.in
(+7284 files in other folders)
